<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:padding="20dp">

    <Button
        android:id="@+id/sky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sky"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bliss"/>

    <Button
        android:id="@+id/bliss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bliss"
        app:layout_constraintStart_toEndOf="@id/sky"
        app:layout_constraintEnd_toStartOf="@id/escape"
        app:layout_constraintTop_toTopOf="@id/sky" />

    <Button
        android:id="@+id/escape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/escape"
        app:layout_constraintStart_toEndOf="@id/bliss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/sky" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/ship_info_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="ship_name_label, ship_name, passenger_capacity_label, passenger_capacity, crew_label, crew, inaugural_date_label, inaugural_date"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/ProgressBarTheme"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/ship_name_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ship_name"
        style="@style/TextLabelStyle"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintTop_toBottomOf="@id/sky"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/ship_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Norwegian Sky"
        style="@style/TextStyle"
        app:layout_constraintTop_toTopOf="@id/ship_name_label"
        app:layout_constraintStart_toEndOf="@id/ship_name_label"/>

    <TextView
        android:id="@+id/passenger_capacity_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/passenger_capacity"
        style="@style/TextLabelStyle"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintTop_toBottomOf="@id/ship_name_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/passenger_capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="2,004 (double occupancy)"
        style="@style/TextStyle"
        app:layout_constraintTop_toTopOf="@id/passenger_capacity_label"
        app:layout_constraintStart_toEndOf="@id/passenger_capacity_label"/>

    <TextView
        android:id="@+id/crew_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crew"
        style="@style/TextLabelStyle"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintTop_toBottomOf="@id/passenger_capacity_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/crew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="899"
        style="@style/TextStyle"
        app:layout_constraintTop_toTopOf="@id/crew_label"
        app:layout_constraintStart_toEndOf="@id/crew_label"/>

    <TextView
        android:id="@+id/inaugural_date_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/inaugural_date"
        style="@style/TextLabelStyle"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintTop_toBottomOf="@id/crew_label"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/inaugural_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1999"
        style="@style/TextStyle"
        app:layout_constraintTop_toTopOf="@id/inaugural_date_label"
        app:layout_constraintStart_toEndOf="@id/inaugural_date_label"/>

    <TextView
        android:id="@+id/error_ship"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/error_loading_data"
        android:textAppearance="@style/ErrorTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>